# pylint-ruff-sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-sample.yaml  LICENSE  PUBLISHING.md  README.md  SUMMARY.md  cspell.config.yaml  example_integration.md  pyproject.toml  release_notes.md  ruff_implemented.json  test.toml  test_debug.toml
.config/: dictionary.txt
.cursor/rules/: python.mdc
.github/workflows/: release.yml  update-cache.yml
data/: ruff_implemented_rules.json
pylint_ruff_sync/: main.py
scripts/: __init__.py  check_arg_order.py
src/pylint_ruff_sync/: __init__.py  __main__.py  argument_checker.py  cache_manager.py  constants.py  data_collector.py  main.py  message_generator.py  mypy_overlap.py  pylint_cleaner.py  pylint_extractor.py  pylint_rule.py  pyproject_updater.py  ruff_pylint_extractor.py  rule.py  rules_cache_manager.py  toml_editor.py  toml_file.py  toml_regex.py
src/pylint_ruff_sync/data/: commit_message_template.txt  pr_message_template.txt  release_notes_template.txt  ruff_implemented_rules.json
tests/: __init__.py  conftest.py  constants.py  regenerate_fixtures.py  test_main.py
tests/fixtures/: __init__.py  comments_and_formatting_after.toml  comments_and_formatting_before.toml  complex_existing_config_after.toml  complex_existing_config_before.toml  disabled_rules_by_name_after.toml  disabled_rules_by_name_before.toml  empty_pyproject_after.toml  empty_pyproject_before.toml  existing_pylint_config_after.toml  existing_pylint_config_before.toml  other_tools_only_after.toml  other_tools_only_before.toml  pylint_disable_after.py  pylint_disable_before.py  pylint_without_messages_control_after.toml  pylint_without_messages_control_before.toml
tests/integration/: test_pyproject_integration.py
tests/unit/: test_data_collector.py  test_main.py  test_mypy_overlap.py  test_pylint_cleaner.py  test_sanity.py  test_toml_editor.py  test_toml_regex.py
